--- a/app/templates/students/directives/student_form_template.html
+++ b/app/templates/students/directives/student_form_template.html
@@ -1,13 +1,13 @@
 <form name="newStudentForm" data-ng-submit="save({student: student})">
   <label for="name">Student Name:
-    <input type="text" required data-ng-model="student.name">
+    <input type="text" required data-ng-model="student.name" class="form-control">
   </label>
   <label for="subject">Subject:
-    <input type="text" required data-ng-model="student.subject">
+    <input type="text" required data-ng-model="student.subject" class="form-control">
   </label>
   <label for="grade">Grade:
-    <input type="text" required data-ng-model="student.grade">
+    <input type="number" required data-ng-model="student.grade" class="form-control" min="0" max="4" name="grade">
   </label>
-  <button type="submit" data-ng-disabled="newStudentForm.$invalid">{{buttonText}}</button>
-  <p data-ng-if="!gradeInBounds(student)">Grade must be between 0 and 4.</p>
+  <button type="submit" data-ng-disabled="newStudentForm.$invalid" class="btn btn-default">{{buttonText}}</button>
+  <p data-ng-show="newStudentForm.grade.$error.max || newStudentForm.grade.$error.min">Grade must be between 0 and 4.</p>
 </form>
