--- a/app/templates/students/views/students_view.html
+++ b/app/templates/students/views/students_view.html
@@ -6,11 +6,11 @@
           Name: {{student.name}}<br>
           Subject: {{student.subject}}<br>
           Grade: {{student.grade}}<br>
-          <button data-ng-click="editStudent(student)">Edit</button>
-          <button data-ng-click="removeStudent(student)">Delete</button>
+          <button data-ng-click="editStudent(student)" class="btn btn-default">Edit</button>
+          <button data-ng-click="removeStudent(student)" class="btn btn-default">Delete</button>
         </span>
         <div data-student-form data-ng-if="student.editing" data-button-text="Save Changes" data-student="student" data-save="updateStudent(student)"></div>
-        <button data-ng-if="student.editing" data-ng-click="resetStudent(student)">Cancel</button>
+        <button data-ng-if="student.editing" data-ng-click="resetStudent(student)" class="btn btn-default">Cancel</button>
       </li>
     </ul>
     <div data-student-count data-count="count"></div>
