--- a/app/templates/users/views/signupin_view.html
+++ b/app/templates/users/views/signupin_view.html
@@ -3,18 +3,18 @@
   <form name="userForm" ng-submit="sendToServer(user)">
     <label>
       Username
-      <input type="text" data-ng-model="user.username">
+      <input type="text" data-ng-model="user.username" class="form-control">
     </label>
     <label>
       Password
-      <input type="password" data-ng-model="user.password">
+      <input type="password" data-ng-model="user.password" class="form-control">
     </label>
     <label ng-if="confirmPassword">
       Confirm Password
-      <input type="password" data-ng-model="user.confirmation">
+      <input type="password" data-ng-model="user.confirmation" class="form-control">
       <p data-ng-if="!passwordMatch(user)">Passwords do not match!</p>
     </label>
-    <button type="submit" data-ng-disabled="disableButton(user)">{{buttonText}}</button>
+    <button type="submit" data-ng-disabled="disableButton(user)" class="btn btn-default">{{buttonText}}</button>
   </form>
-  <button data-ng-click="changePlaces()">{{changePlacesText}}</button>
+  <button data-ng-click="changePlaces()" class="btn btn-default">{{changePlacesText}}</button>
 </section>
